# PythonDemoCode

./: LICENSE  README.md
PylintPluginLoader/: README.md  environment.yml  pylintrc  setup.cfg
PylintPluginLoader/pylint_plugins/: duplicate_code.py
PylintPluginLoader/src/: bax.py
PylintPluginLoader/src/special/: bar.py  baz.py
PythonCI/: README.md
