[metadata]
name = PylintPluginLoader
author = Matt Kwiecien
description = Custom pylint plugin auto loader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PythonDemoCode/PylintPluginLoader
license_files = LICENSE

[options]
include_package_data = True
packages = find:
install_requires = pylint

[options.packages.find]
exclude = tests*

[flake8]
max_line_length=88

[mypy]
ignore_missing_imports = True
exclude = build|docs|.venv|venv
